vlib/v/checker/tests/prefix_err.out
vlib/v/checker/tests/prefix_err.v:2:5: error: operator `*` not defined for type `int`
    1 | a := 1
    2 | _ = *a
      |     ^
    3 | a <- 4
    4 |
vlib/v/checker/tests/prefix_err.v:3:1: error: cannot push on non-channel `int`
    1 | a := 1
    2 | _ = *a
    3 | a <- 4
      | ^
    4 |
    5 | _ = ~true
vlib/v/checker/tests/prefix_err.v:5:5: error: operator ~ only defined on int types
    3 | a <- 4
    4 |
    5 | _ = ~true
      |     ^
    6 | _ = !4
vlib/v/checker/tests/prefix_err.v:6:5: error: ! operator can only be used with bool types
    4 |
    5 | _ = ~true
    6 | _ = !4
      |     ^
