vlib/v/checker/tests/prefix_err.vv
a := 1
_ = *a
a <- 4

_ = ~true
_ = !4
